<resources>
    <string name="app_name">Ships</string>
    <string name="randomGame">RANDOM GAME</string>
    <string name="random_game">RANDOM GAME</string>
    <string name="admob_big">ca-app-pub-3940256099942544/1033173712</string>
    <string name="admob_baner">ca-app-pub-3940256099942544/6300978111</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="g">G</string>
    <string name="h">H</string>
    <string name="i">I</string>
    <string name="j">J</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="startGame">START GAME</string>
    <string name="back">BACK</string>
    <string name="reDo">RE DO</string>
    <string name="TableSize">250dp</string>
    <string name="FieldSize">25dp</string>
    <string name="you_win">YOU WIN</string>
    <string name="not_random_game">NOT RANDOM GAME</string>
    <string name="tooEasy">TOO EASY</string>
    <string name="stillEasy">STILL EASY</string>
    <string name="normal">NORMAL</string>
    <string name="you_lose">YOU LOSE</string>
    <string name="expert">EXPERT</string>
    <string name="bluetooth">BLUETOOTH</string>
    <string name="networkGame">NETWORK</string>
    <string name="play">PLAY</string>
    <string name="email_and_password">VIA EMAIL</string>
    <string name="email">Email …</string>
    <string name="password">Password …</string>
    <string name="sign_up">SIGN UP</string>
    <string name="log_in">LOG IN</string>
    <string name="forgot_password">FORGOT PASSWORD</string>
    <string name="logout">LOGOUT</string>
    <string name="create_user">Create USER</string>
    <string name="username">Username</string>
    <string name="sort">sort</string>
    <string name="ranking">RANKING</string>
    <string name="position">POSITION</string>
    <string name="user">USER</string>
    <string name="no_of_games">NO OF GAMES</string>
    <string name="points">POINTS</string>
    <string name="delete_user">DELETE USER</string>
    <string name="confirm_email">Confirm Email …</string>
    <string name="confirm_password">Confirm Password …</string>
    <string name="resend_ver_email">RESEND VER EMAIL</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="login_with_google">VIA GOOGLE</string>
    <string name="multi_player">MULTI PLAYER</string>
    <string name="invite">INVITE</string>
    <string name="fightWith">FIGHT WITH</string>
    <string name="firebasepath_user">User</string>
    <string name="firebasepath_index">index</string>
    <string name="firebasepath_opponent">opponent</string>
    <string name="firebasepath_accepted">accepted</string>
    <string name="easy">EASY</string>
    <string name="games">GAMES</string>
    <string name="login_with_facebook">VIA FACEBOOK</string>
    <string name="facebook_app_id">1054508894949491</string>
    <string name="fb_login_protocol_scheme">fb1054508894949491</string>

</resources>
