<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/constraintLayoutEmailAndPassLogIn"
    tools:context=".EmailAndPassLogIn">

    <EditText
        android:id="@+id/emailEditTextLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColor="@color/pen"
        android:background="@drawable/button_background_pen"
        android:inputType="textEmailAddress"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/passwordEditTextLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColor="@color/pen"
        android:background="@drawable/button_background_pen"
        android:layout_gravity="center"
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/LogInBtnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/button_background_pen_red"
        android:textColor="@color/pen_red"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/resendVerificationEmailBtnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resend_ver_email"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/button_background_pen"
        android:textColor="@color/pen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


    <Button
        android:id="@+id/forgotPasswordBtnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/button_background_pen"
        android:textColor="@color/pen"
        android:onClick="goToForgotPasswordActivity"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>



    <Button
        android:id="@+id/signInBtnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="goToSignIn"
        android:text="@string/sign_up"
        android:layout_gravity="center"
        android:gravity="center"
        android:background="@drawable/button_background_pen"
        android:textColor="@color/pen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <ImageButton
        android:id="@+id/leaveEmailAndPasswordLogInActivity"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:onClick="leaveEmailAndPasswordLogInActivityOnClick"
        android:background="#00000000"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>