<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/LinearLayoutActivityScores">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/TextSizeMini"
            android:layout_margin="8dp"
            android:layout_weight="@integer/PositionWeight"
            android:text="@string/position"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/TextSizeMini"
            android:layout_margin="8dp"
            android:layout_weight="@integer/UserWeight"
            android:text="@string/user"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/TextSizeMini"
            android:layout_margin="8dp"
            android:layout_weight="@integer/NoOFGamesWeight"
            android:text="@string/no_of_games"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/TextSizeMini"
            android:layout_margin="8dp"
            android:layout_weight="@integer/ScoreWeight"
            android:gravity="right"
            android:text="@string/points"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewScores"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayoutActivityScores"/>

</androidx.constraintlayout.widget.ConstraintLayout>