<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChooseGameLevel">


    <Button
        android:id="@+id/tooEasy"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="tooEasyGame"
        android:text="@string/tooEasy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        />


    <Button
        android:id="@+id/normal"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="normalGame"
        android:text="@string/normal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        />

    <Button
        android:id="@+id/expert"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:onClick="expertGame"
        android:text="@string/expert"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        />


</androidx.constraintlayout.widget.ConstraintLayout>